# pilot-core

./: .gitignore  CLAUDE.md  pyproject.toml
.githooks/: commit-msg  post-commit  pre-commit
agents/: academic-researcher.yaml  builder.yaml  git-reviewer.yaml  initializer.yaml  migrator.yaml  parallel-results-searcher.yaml  verifier.yaml  web-researcher.yaml
docs/: core-config.md  enforcement.md  knowledge.md  monitoring-guide.md  prompt-baseline.md  telemetry.md  tools.md  work-tracking.md  workflows.md
lib/: __init__.py  context.py  guards.py  index.py  indexer.py  invoke.py  log.py  paths.py  precommit.py  progress_enhanced.py  queries.py  query_builder.py  repo_search.py  resume.py  rule_coverage.py  rule_registry.py  run.py  search.py  session.py  startup.py  telemetry.py  validate.py  worktree.py
pilot_core/: approve.py  context.py  embed.py  guards.py  indexer.py  invoke.py  paths.py  precommit.py  progress.py  progress_enhanced.py  queries.py  query_builder.py  repo_search.py  resume.py  rule_coverage.py  rule_registry.py  run.py  search.py  startup.py  telemetry.py
pilot_tools/: __init__.py  agent_status.py  audit_rules.py  benchmark.py  context.py  enforcement_coverage.py  enforcement_stats.py  feature_tracker.py  generate_enforcement_docs.py  parallel_task.py  rule_audit.py  rule_coverage.py  web_fetch.py  web_search.py
tests/: __init__.py  test_cli_tools.py  test_deep_research_metadata.py  test_indexer.py  test_invoke_progress.py  test_precommit.py  test_progress.py  test_queries.py  test_research_cache.py
tools/: __main__.py  agent_status.py  benchmark.py  context.py  detect_task_tool.py  enforcement_stats.py  feature_tracker.py  parallel_chat.py  (+5 more)
(+61 files in other folders)
